bug (13896) - Pipeline || UI || project name is visible on Pipeline page. and UI Distorted bug (14396) - Project Inner Pages || Critical || Project ID is missing from the inner project pages.

--- a/web/src/scss/_pipeline.scss
+++ b/web/src/scss/_pipeline.scss
@@ -144,7 +144,7 @@
     th {
         border: solid 1px #cad0d8;
         background: map-get($colors , whiteColor );
-        position: relative;
+        position: -ms-page;
         svg {
             @include transition(all ease 0.3s);
             font-size: 18px;
